--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         streamlit run app.py &
         sleep 5
-        wget http://localhost:5000 -O index.html
+        wget http://0.0.0.0:5000 -O index.html
         
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
