--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
- 
 name: Deploy to GitHub Pages
 
 on:
@@ -23,7 +22,7 @@ jobs:
         
     - name: Build and deploy
       run: |
-        streamlit run app.py &
+        streamlit run app.py --server.port 5000 --server.address 0.0.0.0 &
         sleep 5
         wget http://0.0.0.0:5000 -O index.html
         
